Z-index fix for Edge.

--- a/Arriba/Arriba.Web/parts/SearchBox.scss
+++ b/Arriba/Arriba.Web/parts/SearchBox.scss
@@ -14,6 +14,10 @@
     padding-right: 4px;
     margin-right: 8px;
 
+    // Needed to keep the rail above resultsListing floating headers in Edge.
+    // Apparently the first non absolute element about rail needs to be z-indexed to make it work.
+    z-index: 1;
+
     input { @extend .input;
         box-sizing: border-box;
         border: none;
